[package]
name = "fingered"
description = "FINGER reimplementation by EDgar"
version = "0.1.0"
edition = "2021"

[features]
default = ["unix-socket"]
unix-socket = []

[dependencies]
bstr = "1.9.0"
clap = { version = "4.4", features = ["derive", "env", "suggestions"] }
futures = "0.3.30"
listenfd = "1.0.1"
nom = "7.1.3"
tokio = { version = "1.35", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "sync"] }
toml = "0.8.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
